--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://svaniksharma.github.io'
 languageCode = 'en-us'
-title = 'Svanik Sharma Website'
+title = "Svanik Sharma's Website"
 theme = 'papermod'
 math = true
