Added short ggml tutorial

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,3 +3,6 @@ languageCode = 'en-us'
 title = "Svanik Sharma's Website"
 theme = 'papermod'
 math = true
+[markup]
+  [markup.highlight]
+    lineNos = true
