--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -64,6 +64,11 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: ./public
 
   # Deployment job
   deploy:
